--- a/index.html
+++ b/index.html
@@ -15,28 +15,21 @@ textarea { color:#eee; background:#111; font-family:monospace; font-size:11pt; l
 <textarea id="htmlBox" placeholder="HTML"></textarea>
 <textarea id="cssBox" placeholder="CSS"></textarea>
 <textarea id="jsBox" placeholder="JS"></textarea>
-<button id="shareBtn" type="button">share</button>
 <script>
-function renderPreview(type){
-  var doc = "<!DOCTYPE html>\n<html>\n<head>\n<meta charset='utf-8' />\n<style>\n"+cssBox.value+"\n</style>\n</head>\n<body>\n"+htmlBox.value+"\n<script>\n"+jsBox.value+"\n<\/script>\n<\/body>\n<\/html>";
-  type == 'f' ? document.body.innerHTML = doc : previewBox.srcdoc = doc;
+function renderPreview(){
+  previewBox.srcdoc = "<!DOCTYPE html>\n<html>\n<head>\n<meta charset='utf-8' />\n<style>\n"+cssBox.value+"\n</style>\n</head>\n<body>\n"+htmlBox.value+"\n<script>\n"+jsBox.value+"\n<\/script>\n<\/body>\n<\/html>";
 }
-function loadData(){
-  if(location.hash.length>1){
-    var data = location.hash.substr(1).split(':'), type;
-    type = data[0], data = JSON.parse(window.atob(decodeURIComponent(data[1])));
-    htmlBox.value = data.html;
-    cssBox.value = data.css;
-    jsBox.value = data.js;
-    renderPreview(type);
-  }
+document.body.oninput = function(){
+  renderPreview();
+  location.hash = 'e:'+encodeURIComponent(window.btoa(JSON.stringify({html: htmlBox.value, css: cssBox.value, js: jsBox.value})));
+};
+if(location.hash.length>1){
+  var data = JSON.parse(window.atob(decodeURIComponent(location.hash.substr(1))));
+  htmlBox.value = data.html;
+  cssBox.value = data.css;
+  jsBox.value = data.js;
 }
-function showLink(type){
-  prompt('Your shareable link:', location.protocol+'//'+location.host+location.pathname+'#'+(type||'e')+':'+encodeURIComponent(window.btoa(JSON.stringify({html: htmlBox.value, css: cssBox.value, js: jsBox.value}))));
-}
-shareBtn.onclick = function(){showLink('e')};
-document.body.oninput = function(){renderPreview('e')};
-loadData();
+renderPreview();
 </script>
 </body>
 </html>
